# vinted-mcp

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
src/vinted_mcp/: __init__.py  client.py  server.py  templates.py
