[project]
name = "vinted-mcp"
version = "0.1.0"
description = "Unofficial MCP server for Vinted (catalog search + inbox + replies)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Malou", email = "malouvaldes@gmail.com" }]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
vinted-mcp = "vinted_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vinted_mcp"]
